syntax = "proto3";

option csharp_namespace = "Synapse.Shared.Protocol";

message Vec3 {
    float x = 1;
    float y = 2;
    float z = 3;
}

message PlayerState {
    string id = 1;
    Vec3 position = 2;
    Vec3 rotation = 3;
    int64 timestamp = 4;
}

message WorldState {
    repeated PlayerState players = 1;
    int64 server_time = 2;
}

message BotMoveData {
    string id = 1;
    Vec3 position = 2;
}

message BotMoveBatch {
    repeated BotMoveData bots = 1;
}